--- a/server/config.json
+++ b/server/config.json
@@ -3,7 +3,7 @@
     "rds_port": "3306",
     "rds_user": "root",
     "rds_password" : "bazooka486",
-    "rds_db": "project",
+    "rds_db": "project550",
     "server_host": "127.0.0.1",
     "server_port":"8080"
 }
