--- a/server/config.json
+++ b/server/config.json
@@ -1,7 +1,7 @@
 {
-    "rds_host": "127.0.0.1",
+    "rds_host": "database-1.chneuw455iqj.us-east-1.rds.amazonaws.com",
     "rds_port": "3306",
-    "rds_user": "root",
+    "rds_user": "admin",
     "rds_password" : "bazooka486",
     "rds_db": "project550",
     "server_host": "127.0.0.1",
